--- a/templates/latest_article.html
+++ b/templates/latest_article.html
@@ -19,6 +19,7 @@
         <a href="#" id="news" class="tab">Новости</a>
         <a href="#" id="faq" class="tab">FAQ</a>
         <a href="#" id="contacts" class="tab">Контакты</a>
+        <a href="#" id="products" class="tab">Товары</a>
     </div>
     {% if user.is_authenticated %}
     <div class="sp">
