--- a/templates/login.html
+++ b/templates/login.html
@@ -28,6 +28,7 @@
             <button type="submit">Войти</button>
         </form>
         <a href="{% url 'register' %}">Нет аккаунта? Регистрация</a>
+        <a href="{% url 'about_us' %}">Продолжить без регистрации</a>
     </div>
     <script src="{% static 'js/navigation.js' %}"></script>
 </body>
