--- a/templates/faq_list.html
+++ b/templates/faq_list.html
@@ -18,6 +18,7 @@
             <a href="#" id="news" class="tab">Новости</a>
             <a href="#" id="faq" class="tab active">FAQ</a>
             <a href="#" id="contacts" class="tab">Контакты</a>
+            <a href="#" id="products" class="tab">Товары</a>
         </div>
         {% if user.is_authenticated %}
         <div class="sp">
