--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -20,6 +20,11 @@
         <a href="#" id="faq" class="tab">FAQ</a>
         <a href="#" id="contacts" class="tab">Контакты</a>
         <a href="#" id="products" class="tab">Товары</a>
+        <a href="#" id="gif" class="tab">GIF</a>
+        <a href="#" id="rand" class="tab">Коты</a>
+        {% if user.is_staff %}
+            <a href="#" id="sales" class="tab">Продажи</a>
+        {% endif %}
     </div>
     {% if user.is_authenticated %}
     <div class="sp">
