--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -44,8 +44,11 @@
                 <h2>{{ product.name }}</h2>
                 <p>Единица измерения: {{ product.get_unit_display }}</p>
                 <p>Цена: {{ product.price }}</p>
-                {% if user.is_authenticated %}
+                {% if user.is_authenticated and not user.is_staff %}
                     <a href="{% url 'buy_product' product.pk %}" class="buy-button">Купить</a>
+                {% endif %}
+                {% if user.is_authenticated %}
+                    <a href="{% url 'product_reviews' product_id=product.id %}" class="reviews-button">Отзывы</a>
                 {% endif %}
                 {% if user.is_authenticated and user.is_staff %}
                     <a href="{% url 'edit_product' product.pk %}" class="read-more">Редактировать</a>
