--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -14,7 +14,7 @@
 
     <div class="navbar">
         <div class="left-items">
-            <a href="#" id="latest" class="tab">Последнее</a>
+            <a href="#" id="latest" class="tab">Главная</a>
             <a href="#" id="about" class="tab">О нас</a>
             <a href="#" id="news" class="tab active">Новости</a>
             <a href="#" id="faq" class="tab">FAQ</a>
