--- a/templates/product_reviews.html
+++ b/templates/product_reviews.html
@@ -14,7 +14,7 @@
 
 <div class="navbar">
     <div class="left-items">
-        <a href="/a" id="latest" class="tab">Последнее</a>
+        <a href="/a" id="latest" class="tab">Главная</a>
         <a href="#" id="about" class="tab">О нас</a>
         <a href="#" id="news" class="tab">Новости</a>
         <a href="#" id="faq" class="tab">FAQ</a>
