--- a/templates/latest_article.html
+++ b/templates/latest_article.html
@@ -14,7 +14,7 @@
 
 <div class="navbar">
     <div class="left-items">
-        <a href="#" id="latest" class="tab active">Последнее</a>
+        <a href="#" id="latest" class="tab active">Главная</a>
         <a href="#" id="about" class="tab">О нас</a>
         <a href="#" id="news" class="tab">Новости</a>
         <a href="#" id="faq" class="tab">FAQ</a>
