--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -11,7 +11,7 @@
 
 <div class="navbar">
     <div class="left-items">
-        <a href="#" id="latest" class="tab">Последнее</a>
+        <a href="#" id="latest" class="tab">Главная</a>
         <a href="#" id="about" class="tab">О нас</a>
         <a href="#" id="news" class="tab">Новости</a>
         <a href="#" id="faq" class="tab">FAQ</a>
@@ -36,26 +36,18 @@
 <div class="container">
     <h1>Товары</h1>
     {% if user.is_authenticated and user.is_staff %}
-        <a href="{% url 'create_product' %}" class="button">Добавить товар</a>
+        <a class="edit" href="{% url 'create_product' %}" class="button">Добавить товар</a>
     {% endif %}
-    <div>
+    <div class="product_container">
         {% for product in products %}
-            <div class="article-summary">
+            <div class="article-summary" data-product-id="{{ product.id }}">
                 <h2>{{ product.name }}</h2>
                 <p>Единица измерения: {{ product.get_unit_display }}</p>
                 <p>Цена: {{ product.price }}</p>
-                {% if user.is_authenticated and not user.is_staff %}
-                    <a href="{% url 'buy_product' product.pk %}" class="buy-button">Купить</a>
-                {% endif %}
-                {% if user.is_authenticated %}
-                    <a href="{% url 'product_reviews' product_id=product.id %}" class="reviews-button">Отзывы</a>
-                {% endif %}
-                {% if user.is_authenticated and user.is_staff %}
-                    <a href="{% url 'edit_product' product.pk %}" class="read-more">Редактировать</a>
-                {% endif %}
             </div>
         {% endfor %}
     </div>
+    
 </div>
 
 <script src="{% static 'js/navigation.js' %}"></script>
