--- a/templates/main_info.html
+++ b/templates/main_info.html
@@ -25,6 +25,10 @@
         {% if user.is_staff %}
             <a href="#" id="sales" class="tab">Продажи</a>
         {% endif %}
+
+        {% if user.is_authenticated and not user.is_staff %}
+            <a href="#" id="cart" class="tab active">Корзина</a>
+        {% endif %}
     </div>
     {% if user.is_authenticated %}
     <div class="sp">
