--- a/templates/sale_list.html
+++ b/templates/sale_list.html
@@ -21,6 +21,10 @@
             {% if user.is_staff %}
                 <a href="#" id="sales" class="tab active">Продажи</a>
             {% endif %}
+
+            {% if user.is_authenticated and not user.is_staff %}
+                <a href="#" id="cart" class="tab active">Корзина</a>
+            {% endif %}
         </div>
         {% if user.is_authenticated %}
         <div class="sp">
