pre_trash_basket

--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -24,7 +24,7 @@
         {% endif %}
 
         {% if user.is_authenticated and not user.is_staff %}
-            <a href="#" id="cart" class="tab active">Корзина</a>
+            <a href="#" id="cart" class="tab">Корзина</a>
         {% endif %}
     </div>
     {% if user.is_authenticated %}
