--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,20 +1,21 @@
-.body {
+body {
     font-family: Montserrat, sans-serif;
 }
 
 * {
     font-family: Montserrat, sans-serif;
 }
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
-    background-color: #333333;  
+    background-color: #333333;
 }
 
 .navbar span {
-    color: #8e8e8e
+    color: #8e8e8e;
 }
 
 .left-items {
@@ -26,7 +27,7 @@
 }
 
 .user-info span {
-    margin-right: 10px; 
+    margin-right: 10px;
 }
 
 .navbar a {
@@ -39,34 +40,42 @@
     background-color: #dddddd;
     color: black;
 }
+
 .container {
     padding: 20px;
 }
+
 .about-company, .article-summary {
     background-color: #e1e1e1;
     padding: 20px;
     margin-top: 5px;
     border-radius: 5px;
 }
+
 .active {
     background-color: #767676;
     color: #f9f9f9;
 }
+
 .table {
     width: 100%;
     border-collapse: collapse;
 }
+
 .table th, .table td {
     padding: 10px;
     text-align: left;
 }
+
 .table th {
     background-color: #333;
     color: white;
 }
+
 .table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
+
 .table tr:hover {
     background-color: #ddd;
 }
