--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -29,7 +29,7 @@
         {% endif %}
 
         {% if not user.is_staff %}
-            <a href="#" id="cart" class="tab active">Корзина</a>
+            <a href="#" id="cart" class="tab">Корзина</a>
         {% endif %}
     <div class="sp">
         <span>Привет, {{ user.username }}!</span>
