--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -2,10 +2,13 @@
 {% load static %}
 <html lang="ru">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>Product Page</title>
 </head>
 <body>
 
@@ -24,11 +27,11 @@
         {% endif %}
 
         {% if user.is_authenticated and not user.is_staff %}
-            <a href="#" id="cart" class="tab active">Корзина</a>
+            <a href="#" id="cart" class="tab">Корзина</a>
         {% endif %}
     </div>
     {% if user.is_authenticated %}
-    <div class="sp">
+    <div class="user-info">
         <span>Привет, {{ user.username }}!</span>
         <a href="/logout">Выйти</a>
     </div>
@@ -37,18 +40,20 @@
     {% endif %}
 </div>
 
-<h2>{{ product.name }}</h2>
-<p>Единица измерения: {{ product.get_unit_display }}</p>
-<p>Цена: {{ product.price }}</p>
-{% if user.is_authenticated and not user.is_staff %}
-    <a href="{% url 'buy_product' product.pk %}" class="buy-button">Купить</a>
-{% endif %}
-{% if user.is_authenticated %}
-    <a class="reviews_cls" href="{% url 'product_reviews' product_id=product.id %}" class="reviews-button">Отзывы</a>
-{% endif %}
-{% if user.is_authenticated and user.is_staff %}
-    <a href="{% url 'edit_product' product.pk %}" class="read-more">Редактировать</a>
-{% endif %}
+<div class="container">
+    <h2>{{ product.name }}</h2>
+    <p>Единица измерения: {{ product.get_unit_display }}</p>
+    <p>Цена: {{ product.price }}</p>
+    {% if user.is_authenticated and not user.is_staff %}
+        <a href="{% url 'buy_product' product.pk %}" class="buy-button">Купить</a>
+    {% endif %}
+    {% if user.is_authenticated %}
+        <a class="reviews_cls" href="{% url 'product_reviews' product_id=product.id %}" class="reviews-button">Отзывы</a>
+    {% endif %}
+    {% if user.is_authenticated and user.is_staff %}
+        <a href="{% url 'edit_product' product.pk %}" class="read-more">Редактировать</a>
+    {% endif %}
+</div>
 
 <script src="{% static 'js/navigation.js' %}"></script>
 </body>
