--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -45,7 +45,12 @@
     <p>Единица измерения: {{ product.get_unit_display }}</p>
     <p>Цена: {{ product.price }}</p>
     {% if user.is_authenticated and not user.is_staff %}
-        <a href="{% url 'buy_product' product.pk %}" class="buy-button">Купить</a>
+    <form method="POST" action="{% url 'add_to_cart' product.id %}">
+        {% csrf_token %}
+        <label for="quantity">Количество:</label>
+        <input type="number" id="quantity" name="quantity" value="1" min="1" required>  
+        <button type="submit" class="buy-button">Добавить в корзину</button>
+    </form>
     {% endif %}
     {% if user.is_authenticated %}
         <a class="reviews_cls" href="{% url 'product_reviews' product_id=product.id %}" class="reviews-button">Отзывы</a>
