--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -1,45 +1,7 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="ru">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости</title>
-    <link rel="stylesheet" href="{% static "css/styles.css" %}">
-</head>
-<body>
+{% extends "base.html" %}
 
-    <div class="navbar">
-        <div class="left-items">
-            <a href="#" id="latest" class="tab">Главная</a>
-            <a href="#" id="about" class="tab">О нас</a>
-            <a href="#" id="news" class="tab active">Новости</a>
-            <a href="#" id="faq" class="tab">FAQ</a>
-            <a href="#" id="contacts" class="tab">Контакты</a>
-            <a href="#" id="products" class="tab">Товары</a>
-            <a href="#" id="gif" class="tab">GIF</a>
-            <a href="#" id="rand" class="tab">Коты</a>
-            {% if user.is_staff %}
-                <a href="#" id="sales" class="tab">Продажи</a>
-            {% endif %}
-
-            {% if user.is_authenticated and not user.is_staff %}
-                <a href="#" id="cart" class="tab">Корзина</a>
-            {% endif %}
-        </div>
-        {% if user.is_authenticated %}
-        <div class="sp">
-            <span>Привет, {{ user.username }}!</span>
-            <a href="/logout">Выйти</a>
-        </div>
-        {% else %}
-            <a href="/login">Войти</a>
-        {% endif %}
-    </div>
-
+{% block title %}Список новостей{% endblock %}
+{% block content %}
     <div class="container">
         <h1>Новости</h1>
         <div>
@@ -53,7 +15,4 @@
             {% endfor %}
         </div>
     </div>
-
-    <script src="{% static 'js/navigation.js' %}"></script>
-</body>
-</html>
+{% endblock %}
