--- a/templates/main_info.html
+++ b/templates/main_info.html
@@ -1,45 +1,6 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="ru">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Коммерческий отдел компании</title>
-    <link rel="stylesheet" href="{% static "css/styles.css" %}" />
-</head>
-<body>
-
-<div class="navbar">
-    <div class="left-items">
-        <a href="#" id="latest" class="tab">Главная</a>
-        <a href="#" id="about" class="tab">О нас</a>
-        <a href="#" id="news" class="tab">Новости</a>
-        <a href="#" id="faq" class="tab">FAQ</a>
-        <a href="#" id="contacts" class="tab">Контакты</a>
-        <a href="#" id="products" class="tab">Товары</a>
-        <a href="#" id="gif" class="tab">GIF</a>
-        <a href="#" id="rand" class="tab active">Коты</a>
-        {% if user.is_staff %}
-            <a href="#" id="sales" class="tab">Продажи</a>
-        {% endif %}
-
-        {% if user.is_authenticated and not user.is_staff %}
-            <a href="#" id="cart" class="tab">Корзина</a>
-        {% endif %}
-    </div>
-    {% if user.is_authenticated %}
-    <div class="sp">
-        <span>Привет, {{ user.username }}!</span>
-        <a href="/logout">Выйти</a>
-    </div>
-    {% else %}
-        <a href="/login">Войти</a>
-    {% endif %}
-</div>
-
+{% extends "base.html" %}
+{% block title %}Коты{% endblock %}
+{% block content %}
 <div class="container">
     {% if user.is_authenticated %}
         <h2>Random Cat Fact:</h2>
@@ -49,7 +10,4 @@
     <div class="features" style="float: left;">
     </div>
 </div>
-
-    <script src="{% static 'js/navigation.js' %}"></script>
-</body>
-</html>
+{% endblock %}
