--- a/templates/sale_list.html
+++ b/templates/sale_list.html
@@ -1,75 +1,39 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-</head>
-<body class="body">
-    <div class="navbar">
-        <div class="left-items">
-            <a href="#" id="latest" class="tab">Главная</a>
-            <a href="#" id="about" class="tab">О нас</a>
-            <a href="#" id="news" class="tab">Новости</a>
-            <a href="#" id="faq" class="tab">FAQ</a>
-            <a href="#" id="contacts" class="tab">Контакты</a>
-            <a href="#" id="products" class="tab">Товары</a>
-            <a href="#" id="gif" class="tab">GIF</a>
-            <a href="#" id="rand" class="tab">Коты</a>
-            {% if user.is_staff %}
-                <a href="#" id="sales" class="tab active">Продажи</a>
-            {% endif %}
-
-            {% if user.is_authenticated and not user.is_staff %}
-                <a href="#" id="cart" class="tab">Корзина</a>
-            {% endif %}
-        </div>
-        {% if user.is_authenticated %}
-        <div class="sp">
-            <span>Привет, {{ user.username }}!</span>
-            <a href="/logout">Выйти</a>
-        </div>
-        {% else %}
-            <a href="/login">Войти</a>
-        {% endif %}
-    </div>
-
+{% extends "base.html" %}
+{% block title %}Продажи{% endblock %}
+{% block content %}
     <div class="container">
         <h1>Список покупок</h1>
         <table class="table">
             <thead>
                 <tr>
-                    <th>Покупатель</th>
-                    <th>Дата продажи</th>
-                    <th>Дата доставки</th>
-                    <th>Товары</th>
-                    <th>Итоговая цена</th>
+                    <th id="customer-header">Покупатель</th>
+                    <th id="sale-date-header">Дата продажи</th>
+                    <th id="delivery-date-header">Дата доставки</th>
+                    <th id="products-header">Товары</th>
+                    <th id="total-price-header">Итоговая цена</th>
                 </tr>
             </thead>
             <tbody>
                 {% for sale in sales %}
                 <tr>
-                    <td>{{ sale.customer.first_name }} {{ sale.customer.last_name }}</td>
-                    <td>{{ sale.sale_date|date:"Y-m-d" }}</td>
-                    <td>{{ sale.delivery_date|date:"Y-m-d" }}</td>
-                    <td>
+                    <td headers="customer-header">{{ sale.customer.first_name }} {{ sale.customer.last_name }}</td>
+                    <td headers="sale-date-header">{{ sale.sale_date|date:"Y-m-d" }}</td>
+                    <td headers="delivery-date-header">{{ sale.delivery_date|date:"Y-m-d" }}</td>
+                    <td headers="products-header">
                         <ul>
                             {% for sale_product in sale.saleproduct_set.all %}
                             <li>{{ sale_product.product.name }} - {{ sale_product.quantity }} {{ sale_product.product.get_unit_display }} ({{ sale_product.price }})</li>
                             {% endfor %}
                         </ul>
                     </td>
-                    <td>{{ sale.total_price }}</td>
+                    <td headers="total-price-header">{{ sale.total_price }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+        
 
         <h1>График статистики продаж</h1>
         <img src="/media/sale_statistics.png" alt="График">
     </div>
-    <script src="{% static 'js/navigation.js' %}"></script>
-</body>
-</html>
+{% endblock %}
